--- a/10.Position/postion1.css
+++ b/10.Position/postion1.css
@@ -7,13 +7,14 @@ img{
 
     /* default */
     /* position: static; */
+
     /* position: relative; */
-    /* position: absolute; */
-    /* position: fixed; */
+    position: absolute;
+    position: fixed;
     /* position: sticky; */
 
 
-    /* top: -10px; */
+    /* top: 10px; */
     /* left: 200px; */
     /* bottom: 0px; */
     /* right: 0px; */
